changing to version 2.0
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@624 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/help/editor/keys.html
+++ b/src/mmixide/help/editor/keys.html
@@ -63,5 +63,10 @@
     <TR><TD>-<TD>Ctrl<TD>Zoom out</TR>
     <TR><TD>/ <TD>Ctrl<TD>Zoom to 100% (Only on numeric keypad)</TR> 
 	</table>
+	<h4>Indentation and Pretty Printing</h4>
+	<table border="1" cellpadding="4">
+	<TR><TH>Key<TH>Modifier<TH>Binding</TR>
+    <TR><TD>I<TD>Ctrl<TD>Automatically adjust indentation</TR>
+	</table>
 
 </body>
