adding page on initialization
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@625 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -45,6 +45,7 @@ file: <a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.9/setup
 <h2>General Documentation</h2>
 <ul>
 <li><a href="configuration.html">Configuration Files</a>
+<li><a href="initialization.html">Parameter Initialization</a>
 <li><a href=messages.html>Message Specification</a>
 <li><a href=cache.html>Cache Specification</a>
 </ul>
