--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -19,8 +19,8 @@ code and browse the subversion repository.
 Here you find documents, specifications for individual devices and
 links to ready to run binary examples.
 
-<H2> Latest Version: 1.9 </H2> Win32 Setup
-file: <a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.9/setup_vmb_1_9.exe/download">setup_1_9.exe</a>
+<H2> Latest Version: 2.0 </H2> Win32 Setup
+file: <a href="http://sourceforge.net/projects/vmb/files/vmb/Version%202.0/setup_vmb_2_0.exe/download">setup_vmb_2_0.exe</a>
 <H2> Device Documentation </H2>
 <UL>
 <LI><a href="mother_help.html">mother</a> - the motherboard herself
@@ -54,7 +54,7 @@ file: <a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.9/setup
 <ul>
 <li>Windows<br> Currently, the simplest way to install the VMB devices
 is available for Windows users. <br> Download the <strong>
-<a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.9/setup_vmb_1_9.exe/download">setup
+<a href="http://sourceforge.net/projects/vmb/files/vmb/Version%202.0/setup_vmb_2_0.exe/download">setup
 file</a></strong>, double click it, and you are done. <br> If all goes
 well, it will start a simple configuration: from the file readme.vmb:
 a screen, a keyboard, a MMIX CPU, a ROM, and a ROM&nbsp;image. The
