Fixing bug in memory inspector not using enter key
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@650 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/help/debugger/breaks.html
+++ b/src/mmixide/help/debugger/breaks.html
@@ -11,6 +11,7 @@
 	<param name="Keyword" value="Tracepoint">
 </OBJECT>
 <h3>The MMIX Breakpoint Window</h3>
+<h4> bbb</h4>
 	<font color="gray"><img src="breaks.png" alt="" height="230" width="235" align="right" border="2" hspace="10" vspace="10"></font>
 	<p>This window lets you manage breakpoints.</p>
 	<p>When the window is opended, it displays a listbox with all currently set breakpoints. For example on the right you see four breakpoints: an execute breakpoint at address #144, a read and write breakpoint in file hello.mms, line 6, an execute breakpoint in the same file at line 10, and finaly again in the same file a trace point in line 13.</p>
