PUSHJ uses relative adresses
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@667 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/help/instructions/pushj.html
+++ b/src/mmixide/help/instructions/pushj.html
@@ -12,7 +12,7 @@
 
   <B>Name:</B>
 <p>
-<a name="PUSHJ" id="PUSHJ">PUSHJ</a> $X,$Y,Z
+<a name="PUSHJ" id="PUSHJ">PUSHJ</a> $X,YZ
  <br><a name="PUSHGO" id="PUSHGO">PUSHGO</a> $X,$Y,Z
  <p>
 <B>Specification:</B>
